[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=1]
[ext_resource path="res://src/resources/fonts/helvetica-rounded-bold-5871d05ead8de.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/scenes/SEARCH_LIST.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="SEARCH_LIST" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 115.0
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "

[center][b][color=black]Lista de resultados 3000[/color][/b][/center]"
text = "

Lista de resultados 3000"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 97.0
margin_bottom = 138.0
theme = ExtResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Selecione um resultado da pesquisa para ver mais detalhes[/color][/center]"
text = "Selecione um resultado da pesquisa para ver mais detalhes"

[node name="Table" type="VBoxContainer" parent="."]
anchor_right = 0.984
anchor_bottom = 0.927
margin_left = 13.0
margin_top = 138.0
margin_right = 0.383972
margin_bottom = -0.200012

[node name="PanelContainer" type="PanelContainer" parent="Table"]
margin_right = 995.0
margin_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="Table/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 990.0
margin_bottom = 18.0

[node name="1" type="Label" parent="Table/PanelContainer/HBoxContainer"]
margin_right = 369.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Cliente"

[node name="2" type="Label" parent="Table/PanelContainer/HBoxContainer"]
margin_left = 369.0
margin_right = 492.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Equipamento"

[node name="3" type="Label" parent="Table/PanelContainer/HBoxContainer"]
margin_left = 492.0
margin_right = 615.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Fabricante"

[node name="4" type="Label" parent="Table/PanelContainer/HBoxContainer"]
margin_left = 615.0
margin_right = 738.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Data de entrada"

[node name="5" type="Label" parent="Table/PanelContainer/HBoxContainer"]
margin_left = 738.0
margin_right = 861.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Data de saída"

[node name="6" type="Label" parent="Table/PanelContainer/HBoxContainer"]
margin_left = 861.0
margin_right = 985.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Identificação"

[node name="PanelContainer2" type="PanelContainer" parent="Table"]
margin_top = 27.0
margin_right = 995.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Table/PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 990.0
margin_bottom = 386.0
custom_styles/bg = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Table/PanelContainer2/ScrollContainer"]
margin_right = 985.0
margin_bottom = 381.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.935
anchor_right = 0.984
anchor_bottom = 0.982
margin_left = -2.48
margin_top = -6.10352e-05
margin_right = 0.383972
margin_bottom = -0.200012
custom_constants/separation = 6

[node name="back" type="Button" parent="HBoxContainer"]
margin_right = 55.0
margin_bottom = 28.0
focus_mode = 0
text = "Voltar"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
margin_left = 61.0
margin_right = 849.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="edit" type="Button" parent="HBoxContainer"]
margin_left = 855.0
margin_right = 911.0
margin_bottom = 28.0
focus_mode = 0
text = "Editar"

[node name="read" type="Button" parent="HBoxContainer"]
margin_left = 917.0
margin_right = 990.0
margin_bottom = 28.0
focus_mode = 0
text = "Acessar"

[connection signal="button_up" from="HBoxContainer/back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="HBoxContainer/edit" to="." method="_on_edit_button_up"]
[connection signal="button_up" from="HBoxContainer/read" to="." method="_on_read_button_up"]
